--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: go
 
 go:
-- 1.9
+- 1.15
 
 # https://golang.org/doc/install/source#environment
 env:
 - BUILD_GOOS=darwin BUILD_GOARCH=amd64
-- BUILD_GOOS=linux BUILD_GOARCH=386
 - BUILD_GOOS=linux BUILD_GOARCH=amd64
 
 before_install:
@@ -20,14 +19,10 @@ install:
 
 before_script:
 - echo " >>> preparing build informations"
-- PROJECT_NAME=$(echo ${TRAVIS_REPO_SLUG} | cut -d "/" -f 2)
+- PROJECT_NAME=$( echo ${TRAVIS_REPO_SLUG} | cut -d "/" -f 2 )
+- OUTPUT_NAME=${PROJECT_NAME}-${BUILD_GOOS}-${BUILD_GOARCH}
 - |
-  OUTPUT_NAME=${PROJECT_NAME}-${BUILD_GOOS}-${BUILD_GOARCH}
-  if [ ${BUILD_GOOS} = "windows" ]; then
-    OUTPUT_NAME+='.exe'
-  fi
-- |
-  APP_VERSION=${TRAVIS_BRANCH}-$(git rev-parse --short ${TRAVIS_COMMIT})
+  APP_VERSION=${TRAVIS_BRANCH}-$( git rev-parse --short ${TRAVIS_COMMIT} )
   PRE_RELEASE="false"
   if [ -n "${TRAVIS_TAG}" ]; then
     APP_VERSION=${TRAVIS_TAG}
@@ -43,15 +38,15 @@ script:
 - echo " >>> Building ${OUTPUT_NAME}"
 - go test -race -covermode=atomic ./...
 - env CGO_ENABLED=0 GOOS=${BUILD_GOOS} GOARCH=${BUILD_GOARCH} go build -a -installsuffix cgo -x -ldflags "-X main.version=${APP_VERSION}" -o ${OUTPUT_NAME} cmd/*.go
-- tar -cvzf ${OUTPUT_NAME}.tar.gz ${OUTPUT_NAME}
+- tar -vzcf ${OUTPUT_NAME}.tar.gz ${OUTPUT_NAME}
 
 after_success:
 - echo " >>> upload codecoverage"
-- bash <(curl -s https://codecov.io/bash) -t ${CODECOV_TOKEN}
+- bash <( curl -s https://codecov.io/bash ) -t ${CODECOV_TOKEN}
 
 before_deploy:
-- shasum -a 256 ${OUTPUT_NAME}.tar.gz
-- mkdir -p build/${TRAVIS_TAG} && shasum -a 256 ${OUTPUT_NAME}.tar.gz | awk '{print $1}' > build/${TRAVIS_TAG}/${OUTPUT_NAME}.tar.gz.sha265
+- mkdir -p build/${TRAVIS_TAG}
+- sha256sum ${OUTPUT_NAME}.tar.gz | awk '{print $1}' > build/${TRAVIS_TAG}/${OUTPUT_NAME}.tar.gz.sha265
 
 deploy:
 - provider: releases
@@ -62,12 +57,4 @@ deploy:
   skip_cleanup: true
   on:
     tags: true
-- provider: s3
-  region: "eu-central-1"
-  bucket: ${AWS_S3_BUCKET}
-  access_key_id: ${AWS_ACCESS_KEY}
-  secret_access_key: ${AWS_ACCESS_SECRET}
-  local_dir: build
-  skip_cleanup: true
-  on:
-    tags: true
+
